[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Graphics/background1.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/bgmidea2.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/No Hope.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -131, -151, 0, 0, 0, 0, 1167, -148, 0, 0, 0, 0, 1165, 666, 0, 0, 0, 0, -129, 667, 0, 0, 0, 0, -131, -151 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 516.5, 258 )
scale = Vector2( 0.395561, 0.598253 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawn" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -131, -151 )
rotation = 0.00230754

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTImer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="startGame" from="UI" to="." method="_on_UI_startGame"]
